<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <TextView
        android:id="@+id/dialog_tv_oldPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/dialog_et_oldPassword"
        android:text="@string/dialog_oldPassword_sentence" />

    <EditText
        android:id="@id/dialog_et_oldPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:inputType="textPassword|textNoSuggestions"
        android:maxLength="32"
        />

    <TextView
        android:id="@+id/dialog_tv_password1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/dialog_et_password1"
        android:text="@string/dialog_newPassword_sentence" />

    <EditText
        android:id="@id/dialog_et_password1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:inputType="textPassword|textNoSuggestions"
        android:maxLength="32"
        />

    <TextView
        android:id="@+id/dialog_tv_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:labelFor="@+id/dialog_et_password2"
        android:text="@string/repeatPassword" />

    <EditText
        android:id="@id/dialog_et_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:inputType="textPassword|textNoSuggestions"
        android:maxLength="32"
        />

</LinearLayout>