<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/White"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

<LinearLayout
    android:id="@+id/Titre"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/White"
    android:paddingBottom="@dimen/nospace"
    android:paddingLeft="@dimen/nospace"
    android:paddingRight="@dimen/nospace"
    android:paddingTop="@dimen/nospace" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/logo"
        android:layout_weight="1"
        />
    <TextView 
        android:background="#b0e0e6"
        android:textColor="#ffffff"
        android:layout_weight="3"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:textSize="15dp"
        android:text="@string/authors"
        android:gravity="center"
        />
    
    <ImageView 
        android:src="@drawable/phone2"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        />
 </LinearLayout>   

    <TextView
        android:id="@+id/Textapropos"
        android:layout_marginTop="15dp"
        android:background="#ece7e7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Titre"
        android:ellipsize="middle"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal" 
        android:maxLines="25"
        android:text="@string/apropos" />
  
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/urldapm"
            android:textSize="18dp" />

</RelativeLayout>